feat: added api spec for payer send-money

--- a/src/api-spec/payer.yaml
+++ b/src/api-spec/payer.yaml
@@ -15,9 +15,9 @@ info:
     in your bank to another customer whose account is in another bank in the Mojaloop
     Scheme.
     Once the customer has initaited the transfer using your application, to effect the transfer,
-    a POST send-money api call will be sent through this api. This api is to be implemented by the 
-    core connector such that is then effectively communicates with  the DFSP Hosted Mojaloop
-    connector to be able to effect the transfer.
+    a POST send-money api call will be sent to this api. This api is to be implemented by the 
+    core connector such it can receive requests from your Operations application which will then effectively communicate with your DFSP Hosted Mojaloop
+    connector to be able to effect the transfer in the mojaloop switch.
 
 
     **Note on terminology:** The term "Switch" is equal to the term "Hub", and
@@ -46,6 +46,12 @@ paths:
       description: >- 
         The Endpoint used by the DFSP Operations application to initiate send money 
         requests to the mojaloop connector
+      requestBody:
+        description: Send Money request body
+        content:
+          application/json:
+            schema: 
+              $ref: "#/components/schemas/transferRequest"
       tags:
         - Send Money  
       responses:
@@ -54,3 +60,104 @@ paths:
             Response for send money request. A quote if it is double 
             integration or a payment status response if it is single
             integration
+  /send-money/{id}:
+    post:
+      summary: Confirm send money
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ConfirmSendMoney'
+      responses:
+        '200':
+          description: Send money confirmed successfully
+        '400':
+          description: Bad request
+
+
+components:
+  schemas:
+    transferRequest:
+      type: object
+      properties:
+        homeTransactionId:
+          type: string
+        from:
+          $ref: '#/components/schemas/Party'
+        to:
+          $ref: '#/components/schemas/Party'
+        amountType:
+          type: string
+          enum: [RECEIVE]
+        currency:
+          type: string
+        amount:
+          type: string
+        transactionType:
+          type: string
+          enum: [TRANSFER]
+        subScenario:
+          type: string
+        note:
+          type: string
+        quoteRequestExtensions:
+          type: array
+          items:
+            $ref: '#/components/schemas/Extension'
+        transferRequestExtensions:
+          type: array
+          items:
+            $ref: '#/components/schemas/Extension'
+        skipPartyLookup:
+          type: boolean
+    Party:
+      type: object
+      properties:
+        type:
+          type: string
+          enum: [CONSUMER]
+        idType:
+          type: string
+          enum: [MSISDN]
+        idValue:
+          type: string
+        idSubValue:
+          type: string
+        displayName:
+          type: string
+        firstName:
+          type: string
+        middleName:
+          type: string
+        lastName:
+          type: string
+        dateOfBirth:
+          type: string
+          format: date
+        merchantClassificationCode:
+          type: string
+        fspId:
+          type: string
+        supportedCurrencies:
+          type: array
+          items:
+            type: string
+        kycInformation:
+          type: string
+        extensionList:
+          type: array
+          items:
+            $ref: '#/components/schemas/Extension'
+    Extension:
+      type: object
+      properties:
+        key:
+          type: string
+        value:
+          type: string
+    ConfirmSendMoney:
+      type: object
+      properties:
+        acceptQuote:
+          type: boolean
