--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
   coreConnectorUnderTest: 
     build:
       context: ./src/
-    image: mojaloop/mifos-core-connector:latest #replace with image to your core connector
+    image: cbs-core-connector:local
     networks:
       - mojaloop-net
     env_file: .env.example
