--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,7 +8,7 @@ services:
   coreConnectorUnderTest: 
     build:
       context: ./src/
-    image: cbs-core-connector:local
+    image: mojaloop/mifos-core-connector # cbs-core-connector:local
     networks:
       - mojaloop-net
     env_file: .env.example
