--- a/config/ttksim/spec_files/system_config.json
+++ b/config/ttksim/spec_files/system_config.json
@@ -1,7 +1,7 @@
 {
   "API_PORT": 4040,
   "HOSTING_ENABLED": false,
-  "REQUEST_PAYLOAD_MAX_BYTES": 200485760,
+  "REQUEST_PAYLOAD_MAX_BYTES": 20485760,
   "INBOUND_MUTUAL_TLS_ENABLED": false,
   "OUTBOUND_MUTUAL_TLS_ENABLED": false,
   "CONFIG_VERSIONS": {
@@ -12,7 +12,11 @@
     "userSettings": 1
   },
   "DB": {
-    "URI": "mongodb://ttk:ttk@localhost:27017/ttk"
+    "HOST": "localhost",
+    "PORT": 27017,
+    "USER": "ttk",
+    "PASSWORD": "ttk",
+    "DATABASE": "ttk"
   },
   "OAUTH": {
     "AUTH_ENABLED": false,
@@ -61,46 +65,97 @@
   },
   "API_DEFINITIONS": [
     {
-      "type": "mojaloop_simulator_inbound",
-      "version": "1.4",
-      "folderPath": "mojaloop_simulator_sim_1.4",
+      "type": "fspiop",
+      "version": "1.0",
+      "folderPath": "fspiop_1.0",
       "asynchronous": true
     },
     {
-      "type": "scheme_adapter_outbound",
+      "type": "fspiop",
+      "version": "1.1",
+      "folderPath": "fspiop_1.1",
+      "asynchronous": true
+    },
+    {
+      "type": "fspiop",
+      "version": "2.0",
+      "folderPath": "fspiop_2.0",
+      "asynchronous": true
+    },
+    {
+      "type": "settlements",
+      "version": "1.0",
+      "folderPath": "settlements_1.0"
+    },
+    {
+      "type": "settlements",
+      "version": "2.0",
+      "folderPath": "settlements_2.0",
+      "prefix": "v2"
+    },
+    {
+      "type": "central_admin",
+      "caption": "(old)",
+      "version": "9.3",
+      "folderPath": "central_admin_old_9.3"
+    },
+    {
+      "type": "central_admin",
+      "version": "1.0",
+      "folderPath": "central_admin_1.0"
+    },
+    {
+      "type": "als_admin",
+      "version": "1.1",
+      "folderPath": "als_admin_1.1"
+    },
+    {
+      "type": "mojaloop_simulator",
+      "version": "0.1",
+      "folderPath": "mojaloop_simulator_0.1"
+    },
+    {
+      "type": "mojaloop_simulator_inbound",
+      "version": "1.4",
+      "folderPath": "mojaloop_simulator_sim_1.4"
+    },
+    {
+      "type": "mojaloop_sdk_outbound_scheme_adapter",
       "version": "1.0",
       "folderPath": "mojaloop_sdk_outbound_scheme_adapter_1.0",
       "hostnames": [],
-      "prefix": "/sdk-out",
-      "asynchronous": true
+      "prefix": "/sdk-out"
     },
     {
-      "type": "SDK Backend Outbound API",
-      "version": "1.0",
-      "folderPath": "SDK Backend Outbound API_1.0",
-      "asynchronous": false,
-      "additionalApi": true
+      "type": "payment_manager",
+      "version": "1.4",
+      "folderPath": "payment_manager_1.4",
+      "hostnames": [
+        "pm4ml.hostname.here"
+      ]
     },
     {
-      "type": "payee",
-      "version": "1.0",
-      "folderPath": "payee_1.0",
-      "asynchronous": false,
-      "additionalApi": true
+      "type": "thirdparty_sdk_outbound",
+      "version": "0.1",
+      "folderPath": "thirdparty_sdk_outbound_0.1"
     },
     {
-      "type": "Send Money Api",
-      "version": "1.0",
-      "folderPath": "Send Money Api_1.0",
-      "asynchronous": false,
-      "additionalApi": true
-    },
-    {
-      "type": "SDK Scheme Adapter API FX",
+      "type": "sdk-scheme-adapter-backend-v2_1_0-openapi3-snippets",
       "version": "2.1",
-      "folderPath": "SDK Scheme Adapter API FX_2.1",
+      "folderPath": "sdk-scheme-adapter-backend-v2_1_0-openapi3-snippets_2.1",
       "asynchronous": false,
-      "additionalApi": true
+      "prefix": "/sdk-backend"
+    },
+    {
+      "type": "sdk-scheme-adapter-outbound-v2_1_0-openapi3-snippets",
+      "version": "2.1",
+      "folderPath": "sdk-scheme-adapter-outbound-v2_1_0-openapi3-snippets_2.1",
+      "asynchronous": false,
+      "prefix": "/sdk-out-v2-1"
     }
-  ]
+  ],
+  "SOCKET_IO_ENGINE_OPTIONS": {
+    "pingInterval": 25000,
+    "pingTimeout": 300000
+  }
 }
