chore: add mojaloop connector mock in the deployment

--- a/config/ttksim/spec_files/system_config.json
+++ b/config/ttksim/spec_files/system_config.json
@@ -159,6 +159,20 @@
       "folderPath": "payer_1.0",
       "asynchronous": false,
       "additionalApi": true
+    },
+    {
+      "type": "core-connector-api-spec-dfsp",
+      "version": "1.0",
+      "folderPath": "core-connector-api-spec-dfsp_1.0",
+      "asynchronous": false,
+      "additionalApi": true
+    },
+    {
+      "type": "core-connector-api-spec",
+      "version": "1.0",
+      "folderPath": "core-connector-api-spec_1.0",
+      "asynchronous": false,
+      "additionalApi": true
     }
   ],
   "SOCKET_IO_ENGINE_OPTIONS": {
