feat: added scheme adapter

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,20 @@
-ENV_VAR=234345
+SDK_SERVER_HOST=0.0.0.0
+SDK_SERVER_PORT=3003
+DFSP_SERVER_HOST=0.0.0.0
+DFSP_SERVER_PORT=3004
+#Do not put the trailing slash on the url
+SDK_BASE_URL=http://mojaloop-connector:4010
+
+# Airtel Configs
+AIRTEL_BASE_URL=openapiuat.airtel.africa
+CLIENT_ID=61d4070a-77d8-4287-a8f5-7574ef41fffa
+CLIENT_SECRET=3dbeec92-2ea9-4eb4-9bde-b4d5125d8870
+GRANT_TYPE=client_credentials
+X_COUNTRY=ZM
+X_CURRENCY=ZMW
+SUPPORTED_ID_TYPE=MSISDN
+SERVICE_CHARGE=0
+EXPIRATION_DURATION=1
+AIRTEL_PIN=1234rtgbnkjhgf
+TRANSACTION_ENQUIRY_WAIT_TIME=10000
+FSP_ID=airtelzambia
