feat: added core connector config

--- a/extras/new-test-harness/config/sdk-dfsp2/api-svc.env
+++ b/extras/new-test-harness/config/sdk-dfsp2/api-svc.env
@@ -53,7 +53,10 @@ CACHE_EXPIRY_SECONDS=3600
 PEER_ENDPOINT=ttk-hub:4040
 
 # BACKEND ENDPOINT
-BACKEND_ENDPOINT=ttk-dfsp2:4040/backend
+## To use TTK acting like a core connector, use the following
+# BACKEND_ENDPOINT=ttk-dfsp2:4040/backend
+## Real core connector
+BACKEND_ENDPOINT=core-connector2:3003
 
 # FSPID of this DFSP
 DFSP_ID=dfsp2
