--- a/extras/new-test-harness/common-sdk.yml
+++ b/extras/new-test-harness/common-sdk.yml
@@ -8,9 +8,7 @@ services:
   api-svc:
     networks:
         - mojaloop-net
-    image: mojaloop/sdk-scheme-adapter:local
-    build:
-      context: ../../
+    image: mojaloop/sdk-scheme-adapter:24.1.0-snapshot.5
     command: yarn nx run modules-api-svc:start
     user: root # Set Root so we can install Curl for Healthchecks
     healthcheck:
