--- a/extras/new-test-harness/config/sdk-dfsp1/api-svc.env
+++ b/extras/new-test-harness/config/sdk-dfsp1/api-svc.env
@@ -76,7 +76,7 @@ AUTO_ACCEPT_QUOTES=false
 # if set to false the SDK will not automatically accept a resolved party
 # but will halt the transer after a party lookup response is received. A further
 # cnofirmation call will be required to progress the transfer to quotes state.
-AUTO_ACCEPT_PARTY=false
+AUTO_ACCEPT_PARTY=true
 
 # if set to false the SDK will not automatically accept a resolved party on a requestToPay operation
 # but will halt the operation after a party lookup response is received. A further
