--- a/extras/new-test-harness/config/sdk-dfsp2/api-svc.env
+++ b/extras/new-test-harness/config/sdk-dfsp2/api-svc.env
@@ -75,7 +75,7 @@ AUTO_ACCEPT_QUOTES=false
 # if set to false the SDK will not automatically accept a resolved party
 # but will halt the transer after a party lookup response is received. A further
 # cnofirmation call will be required to progress the transfer to quotes state.
-AUTO_ACCEPT_PARTY=false
+AUTO_ACCEPT_PARTY=true
 
 # when set to true, when sending money via the outbound API, the SDK will use the value
 # of FSPIOP-Source header from the received quote response as the payeeFsp value in the
