feat: fixed failing tests

--- a/config/ttksim/spec_files/system_config.json
+++ b/config/ttksim/spec_files/system_config.json
@@ -188,6 +188,14 @@
       "asynchronous": false,
       "additionalApi": true,
       "prefix": "/out"
+    },
+    {
+      "type": "sdk-scheme-adapter-backend-v2_1_0-openapi3-snippets-new",
+      "version": "2.1",
+      "folderPath": "sdk-scheme-adapter-backend-v2_1_0-openapi3-snippets-new_2.1",
+      "asynchronous": false,
+      "additionalApi": true,
+      "prefix": "/sdk-backend-new"
     }
   ],
   "SOCKET_IO_ENGINE_OPTIONS": {
