feat: added cc golden path test collection and env in sdk-based-test-harness

--- a/sdk-based-test-harness/config/sdk-dfsp2/api-svc.env
+++ b/sdk-based-test-harness/config/sdk-dfsp2/api-svc.env
@@ -54,9 +54,9 @@ PEER_ENDPOINT=ttk-hub:4040
 
 # BACKEND ENDPOINT
 ## To use TTK acting like a core connector, use the following
-# BACKEND_ENDPOINT=ttk-dfsp2:4040/backend
+BACKEND_ENDPOINT=ttk-dfsp2:4040/backend
 ## Real core connector
-BACKEND_ENDPOINT=core-connector2:3003
+#BACKEND_ENDPOINT=core-connector2:3003
 
 # FSPID of this DFSP
 DFSP_ID=dfsp2
