feat: added api mocking functinality

--- a/sdk-based-test-harness/docker-compose.yml
+++ b/sdk-based-test-harness/docker-compose.yml
@@ -193,6 +193,13 @@ services:
     profiles:
       - debug
 
+  dfsp-api:
+    extends:
+      file: core-connector.yaml
+      service: dfsp-api
+    networks:
+      - mojaloop-net
+      
   core-connector1:
     extends:
       file: core-connector.yaml
