--- a/sdk-based-test-harness/core-connector.env
+++ b/sdk-based-test-harness/core-connector.env
@@ -1,5 +1,15 @@
-# CBS Config
-MTN_BASE_URL=sandbox.momodeveloper.mtn.com
+#DO NOT CHANGE THIS PART
+SDK_BASE_URL=http://dfsp1-sdk-api-svc:4001
+FSP_ID=dfsp1
+DFSP_SERVER_HOST=0.0.0.0
+DFSP_SERVER_PORT=3004
+SDK_SERVER_HOST=0.0.0.0
+SDK_SERVER_PORT=3003
+DFSP_API_SPEC_FILE=./src/api-spec/core-connector-api-spec-dfsp.yml
+SDK_API_SPEC_FILE=./src/api-spec/core-connector-api-spec-sdk.yml
+
+# CBS Config. Paste your env vars below
+MTN_BASE_URL=sandbox.momodeveloper.mtn.com # can be a mocked backend.
 MTN_COLLECTION_API_KEY=b1207baca1d343b581cc21346904c707
 MTN_COLLECTION_CLIENT_ID=c87a6e02-aa8c-4eaf-827a-d5d90e744241
 MTN_COLLECTION_SUBSCRIPTION_KEY=5f40c404bf0c4e4f9b37e533d4993dd7
@@ -16,18 +26,5 @@ EXPIRATION_DURATION=1
 HTTP_TIMEOUT=5000
 MTN_ENV=staging
 DFSP_CURRENCY=UGX
-
-# SERVER CONFIGS
-DFSP_SERVER_HOST=0.0.0.0
-DFSP_SERVER_PORT=3004
-SDK_SERVER_HOST=0.0.0.0
-SDK_SERVER_PORT=3003
-DFSP_API_SPEC_FILE=./src/api-spec/core-connector-api-spec-dfsp.yml
-SDK_API_SPEC_FILE=./src/api-spec/core-connector-api-spec-sdk.yml
-
-#Mojaloop Connector
-#Do not put the trailing slash on the url
-SDK_BASE_URL=http://dfsp1-sdk-api-svc:4001
-FSP_ID=dfsp1
 CONNECTOR_NAME=MTN-UG
 LEI=529900T8BM49AURSDO55
