--- a/sdk-based-test-harness/core-connector.yaml
+++ b/sdk-based-test-harness/core-connector.yaml
@@ -5,3 +5,12 @@ services:
     ports:
       - "13003:3003"
       - "13004:3004"
+
+  dfsp-api:
+    image: stoplight/prism:4
+    command: 'mock -h 0.0.0.0 /tmp/api.oas3.yml'
+    volumes:
+      - ./api.oas3.yml:/tmp/api.oas3.yml:ro
+    ports:
+      # Serve the mocked API locally as available on port 8080
+      - '18080:4010'
